--- a/Backend/Data/Languages/fr-FR.json
+++ b/Backend/Data/Languages/fr-FR.json
@@ -26,6 +26,60 @@
   "target_folder_title": "Répertoire destination",
   "browse_target_folder": "Parcourir",
   "create_backup": "Créer la sauvegarde",
-  "not_valid": "Merci de renseigner tout les champs"
+  "not_valid": "Merci de renseigner tout les champs",
 
+  "unsupported_backup_type": "Type de sauvegarde non pris en charge",
+  "converting_path_unc_error": "Erreur de conversion du chemin en UNC:",
+  "invalid_choice": "Choix invalide. Veuillez entrer une option valide.",
+
+  "choose_options": "Choisisez une option :",
+  "exit": "Quitter",
+  "creating_backup": "Creation de la sauvegarde...",
+  "accessing_settings": "Accès aux paramètres...",
+  "accessing_backups": "Consultation des backups existantes...",
+  "accessing_logs": "Consultation des logs...",
+  "exiting": "Fermeture en cours...",
+
+  "differential_backup_success": "La sauvegarde différentielle s'est terminée avec succès en {0} secondes",
+  "error_copying_files": "Erreur lors de la copie des fichiers : {0}",
+
+  "error_copying_modified_files": "Erreur lors de la copie des fichiers modifiés ou nouveaux : {0}",
+  "differential_backup_finished": "La sauvegarde différentielle s'est terminée avec succès en {0} secondes\n",
+
+  "error_scanning_files": "Erreur lors du scan des fichiers : {0}",
+  "backup_progress": "Progression : {0}% | Fichiers restants : {1} | Taille restante : {2} octets | Fichier source actuel : {3} | Fichier destination actuel : {4}",
+
+  "list_of_backups": "Liste des sauvegardes:",
+  "no_backups_available": "Aucune sauvegarde disponible.\n",
+  "source_directory": "Répertoire source : {0}",
+  "target_directory": "Répertoire destination : {0}\n",
+  "options": "Options:",
+  "go_back": "1. Retour",
+  "manage_backup": "2. Gérer une sauvegarde",
+  "launch_all_backups": "3. Lancer toutes les sauvegardes",
+  "backup_number_prompt": "Numéro de sauvegarde (entre 1 et {0}) : ",
+  "invalid_backup_number": "Numéro de sauvegarde invalide.",
+
+  "creating_new_backup": "Création d'une nouvelle sauvegarde :",
+  "enter_backup_type": "Entrez le type de sauvegarde (total/différentiel) :",
+  "invalid_backup_type_prompt": "Type de sauvegarde invalide. Veuillez entrer 'total' ou 'différentiel'.",
+  "enter_backup_name": "Entrez le nom de la sauvegarde :",
+  "enter_source_directory": "Entrez le répertoire source :",
+  "enter_target_directory": "Entrez le répertoire cible :",
+  "backup_created_successfully": "Sauvegarde créée avec succès !",
+  "error_creating_backup": "Erreur lors de la création de la sauvegarde : {0}",
+
+  "managing_backup": "Gestion de la sauvegarde : {0}",
+  "current_state": "Actuellement : {0}",
+  "launch_backup": "1. Lancer la sauvegarde",
+  "pause_backup": "2. Mettre la sauvegarde en pause",
+  "cancel_backup": "3. Annuler la sauvegarde",
+  "resume_backup": "4. Reprendre la sauvegarde",
+  "back_option": "5. Retour",
+  "retry_backup": "1. Réessayer la sauvegarde",
+  "invalid_state": "État invalide.",
+  "enter_your_choice": "Entrez votre choix :",
+
+  "enter_settings": "Quel paramètre voulez-vous configurer ?",
+  "choose_language":  "Rentrez une langue parmis celles disponibles :"
 }
