--- a/Backend/Data/Languages/fr-FR.json
+++ b/Backend/Data/Languages/fr-FR.json
@@ -39,6 +39,8 @@
   "accessing_backups": "Consultation des backups existantes...",
   "accessing_logs": "Consultation des logs...",
   "exiting": "Fermeture en cours...",
+  "logs_folder_doest_exist": "Le dossier des logs n'existe pas.",
+
 
   "differential_backup_success": "La sauvegarde différentielle s'est terminée avec succès en {0} secondes",
   "error_copying_files": "Erreur lors de la copie des fichiers : {0}",
