detecting and creating file to ignore method with front

--- a/Backend/Data/Languages/fr-FR.json
+++ b/Backend/Data/Languages/fr-FR.json
@@ -84,5 +84,7 @@
   "enter_your_choice": "Entrez votre choix :",
 
   "enter_settings": "Quel paramètre voulez-vous configurer ?",
-  "choose_language": "Rentrez une langue parmis celles disponibles :"
+  "choose_language": "Rentrez une langue parmis celles disponibles :",
+
+  "select_ignored_file_button": "Sélectionner un fichier à ignorer"
 }
