#14 languages updated on page param and side bar + log out button

--- a/Backend/Data/Languages/en-EN.json
+++ b/Backend/Data/Languages/en-EN.json
@@ -99,7 +99,16 @@
   "TXT": ".TXT",
   "XML": ".XML",
   "ApplyChanges": "Apply Changes",
-  "GroupBoxTitle": "Settings"
+  "GroupBoxTitle": "Settings",
+  "NewBackup": "📁 New Backup",
+  "AccessLogs": "📜 Access Logs",
+  "Settings": "⚙️ Settings",
+  "TrackSaves": "🔍 Track Backups",
+  "CloseButton": "❌ Close",
+  "mySaves": "MY SAVES",
+  "newSave": "New Save",
+  "estimatedTime": "Estimated Time"
+
 
 
 }
