--- a/Backend/Data/Languages/es-ES.json
+++ b/Backend/Data/Languages/es-ES.json
@@ -118,11 +118,14 @@
   "browse": "Navegue por",
   "destinationPath": "Directorio de destinos",
   "browse2": "Navegue por",
-  "createSave": "Crear la copia de seguridad"
+  "createSave": "Crear la copia de seguridad",
 
-
-
-
-
-
+  "MaxParallelFileSize": "Tamaño máximo de archivo (kB)",
+  "BusinessSoftware": "Software de negocios",
+  "FileExtensionsToEncrypt": "Extensiones de archivos para encriptar",
+  "FileExtensionsPrioritary": "Extensiones de archivos prioritarias",
+  "AddButton": "Agregar",
+  "DeleteButton": "Eliminar",
+  "ErrorMaxParallelFileSize": "Por favor, ingrese un valor entero para el tamaño máximo de archivo.",
+  "InputError": "Error de entrada."
 }
