#14 updated translation and design on new button perform all backups

--- a/Backend/Data/Languages/en-EN.json
+++ b/Backend/Data/Languages/en-EN.json
@@ -146,5 +146,6 @@
   "Full": "Full",
   "Differential": "Differential",
   "Unknown": "Unknown",
-  "SourceTargetSame": "Source and target directories cannot be the same."
+  "SourceTargetSame": "Source and target directories cannot be the same.",
+  "PerformAllBackups": "Perform All Backups"
 }
